@@ -5,9 +5,9 @@
 # This file is the official location of the current YARP version number.
 
 SET(YARP_VERSION_MAJOR "2")
-SET(YARP_VERSION_MINOR "2")
-SET(YARP_VERSION_PATCH "8")
-SET(YARP_VERSION_MODIFIER "rc0")
+SET(YARP_VERSION_MINOR "3")
+SET(YARP_VERSION_PATCH "0")
+SET(YARP_VERSION_MODIFIER "")
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${YARP_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${YARP_VERSION_MINOR}")
